Improve templates to use inheritance

--- a/templates/dataset.html
+++ b/templates/dataset.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <h1>{{ title }}</h1>
 
 <h3>{{ description }}</h3>
@@ -9,3 +12,4 @@
   <li>{{ d }}</li>
 {% endfor %}
 </ul>
+{% endblock content %}
