--- a/templates/list.html
+++ b/templates/list.html
@@ -1,6 +1,8 @@
+{% extends "base.html" %}
 
+{% block content %}
 {% for d in datapackages %}
-  <a href="{{ d }}">{{ d }}</a>
+  <a href="{{ d }}.html">{{ d }}</a>
 {% endfor %}
-
+{% endblock content %}
 
