--- a/templates/dataset.html
+++ b/templates/dataset.html
@@ -7,9 +7,12 @@
 
 {{ readme }}
 
+{% for d in datafiles %}
 <ul>
-{% for d in datasets %}
-  <li>{{ d }}</li>
-{% endfor %}
+  <li>Nome: {{ d.name }}</li>
+  <li>Nome do ficheiro: {{ d.basename }}</li>
+  <li>URL: {{ d.url }}</li>
+  <li>Formato: {{ d.format }}</li>
 </ul>
+{% endfor %}
 {% endblock content %}
