--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="/css/main.css">
 	</head>
 	<body>
-		<nav class="nav row">
+		<nav class="nav">
 			<div>
 				<ul>
 				  <li><a href="#">Acerca</a></li>
@@ -17,10 +17,15 @@
 				</ul>
 			</div>
 		</nav>
-		<header class="header row">
+		<header class="header">
 			<div>
-				<h1><img src="media/img/centraldedados.png" alt="Central de Dados" /></h1>
-				<p>A Central de Dados é um sítio lorem ipsum sit amet e por aí adiante.</p>
+				<h1>
+					<img src="img/centraldedados.png" alt="Central de Dados" />
+				</h1>
+				<div class="description">
+					<h3>A Central de Dados é um sítio lorem ipsum sit amet e por aí adiante.</h3>
+					<p>Donec luctus tellus sapien, ut imperdiet dolor volutpat vel. Curabitur nec convallis turpis. Nunc facilisis lorem et odio hendrerit, congue blandit ligula vulputate. Pellentesque nec erat sit amet orci vulputate scelerisque. Vivamus ante diam, congue sed felis sit amet, porta blandit elit. Nullam accumsan odio at mauris imperdiet, nec tristique arcu lobortis. Mauris neque dui, ornare in enim et, lobortis adipiscing neque. Ut justo orci, luctus in pretium vitae, tempor sit amet.</p>
+				</div>
 			</div>
 		</header>
 		<section class="row">
