Add Makefile and OKFN mention on template

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
 				<ul>
 					<li><h4><a rel="external" href="#">Transparência Hackday</a></h4> com</a></li>
 					<li><h4>Apoio:</h4> <a rel="external" href="#">Journalism++</a></li>
+					<li><h4>Agradecimentos:</h4> <a rel="external" href="#">Open Knowledge</a></li>
 					<li><h4>Parceiros:</h4> <a rel="external" href="#">AMA, Agência para a Modernização</a></li>
 				</ul>
 			</div>
