--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,11 @@
 		</nav>
 		<header class="header">
 			<div>
-				<h1>
-					<img src="img/centraldedados.png" alt="Central de Dados" />
-				</h1>
 				<div class="description">
-					<h3>A Central de Dados é um sítio lorem ipsum sit amet e por aí adiante.</h3>
-					<p>Donec luctus tellus sapien, ut imperdiet dolor volutpat vel. Curabitur nec convallis turpis. Nunc facilisis lorem et odio hendrerit, congue blandit ligula vulputate. Pellentesque nec erat sit amet orci vulputate scelerisque. Vivamus ante diam, congue sed felis sit amet, porta blandit elit. Nullam accumsan odio at mauris imperdiet, nec tristique arcu lobortis. Mauris neque dui, ornare in enim et, lobortis adipiscing neque. Ut justo orci, luctus in pretium vitae, tempor sit amet.</p>
+					<p><img src="/img/centraldedados.png" alt="Central de Dados" /></p>
+					<p>A Central de Dados é um repositório aberto de datasets <a href="#">Open Data em Portugal</a>. Os dados aqui publicados são provenientes de diversas fontes (sempre indicadas!) e estão sob a curadoria do Transparência Hackday Portugal.</p>
 				</div>
+				<h1>Central de Dados</h1>
 			</div>
 		</header>
 		<section class="row">
@@ -35,11 +33,11 @@
 		</section>
 		<footer class="footer row">
 			<div>
+				<h4><a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday Portugal</a></h4></a>
 				<ul>
-					<li><h4><a rel="external" href="#">Transparência Hackday</a></h4> com</a></li>
-					<li><h4>Apoio:</h4> <a rel="external" href="#">Journalism++</a></li>
-					<li><h4>Agradecimentos:</h4> <a rel="external" href="#">Open Knowledge</a></li>
-					<li><h4>Parceiros:</h4> <a rel="external" href="#">AMA, Agência para a Modernização</a></li>
+					<li>com Apoio <a rel="external" href="http://jplusplus.pt">Journalism++</a></li>
+					<li>Agradecimentos <a rel="external" href="https://okfn.org">Open Knowledge</a></li>
+					<li>Parceiros <a rel="external" href="http://ama.pt">AMA, Agência para a Modernização</a></li>
 				</ul>
 			</div>
 		</footer>
