--- a/templates/dataset.html
+++ b/templates/dataset.html
@@ -12,7 +12,7 @@
   <li>Nome: {{ d.name }}</li>
   <li>Nome do ficheiro: {{ d.basename }}</li>
   <li>Formato: {{ d.format }}</li>
-  <li><a href="/files/{{ d.basename }}">Download</a></li>
+  <li><a href="/download/{{ d.basename }}">Download</a></li>
 </ul>
 {% endfor %}
 {% endblock content %}
