--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
 		<header class="header">
 			<div>
 				<div class="description">
-					<p><img src="/img/centraldedados.png" alt="Central de Dados" /></p>
-					<p>A Central de Dados é um repositório aberto de datasets <a href="#">Open Data em Portugal</a>. Os dados aqui publicados são provenientes de diversas fontes (sempre indicadas!) e estão sob a curadoria do Transparência Hackday Portugal.</p>
+					<a href="/"><img src="/img/centraldedados.png" alt="Central de Dados" /></a>
+					<p>A Central de Dados é um repositório aberto de datasets <a href="#">Open Data em Portugal</a>. Os dados aqui publicados são provenientes de diversas fontes (sempre indicadas!) e estão sob a curadoria do <a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday</a>.</p>
 				</div>
-				<h1>Central de Dados</h1>
+				<h1><a href="/">Central de Dados</a></h1>
 			</div>
 		</header>
 		<section class="row">
@@ -35,9 +35,18 @@
 			<div>
 				<h4><a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday Portugal</a></h4></a>
 				<ul>
-					<li>com Apoio <a rel="external" href="http://jplusplus.pt">Journalism++</a></li>
-					<li>Agradecimentos <a rel="external" href="https://okfn.org">Open Knowledge</a></li>
-					<li>Parceiros <a rel="external" href="http://ama.pt">AMA, Agência para a Modernização</a></li>
+					<li>com Apoio <a rel="external" href="http://jplusplus.pt">
+						<img src="/img/jplusplus.png" alt="Journalism++" />
+						<strong>Journalism++</strong>
+					</a></li>
+					<li>Agradecimentos <a rel="external" href="https://okfn.org">
+						<img src="/img/okfn.png" alt="OKFN" />
+						<strong>Open Knowledge</strong>
+					</a></li>
+					<li>Parceiros <a rel="external" href="http://ama.pt">
+						<img src="/img/ama.png" alt="AMA" />
+						<strong>AMA, Agência para a Modernização</strong>
+					</a></li>
 				</ul>
 			</div>
 		</footer>
