--- a/templates/list.html
+++ b/templates/list.html
@@ -3,11 +3,10 @@
 {% block content %}
   <ul>
     {% for d in datapackages %}
-      {% if d.title %}
-      <li><h3><a href="datasets/{{ d.name }}.html">{{ d.title }}</a><h3></li>
-      {% else %}
-      <li><h3><a href="datasets/{{ d.name }}.html">{{ d.name }}</a></h3></li>
-      {% endif %}
+      {{ d.title }}
+      {{ d.description }}
+      {% if d.sources %} Fontes: {% for s in d.sources %}<a href="{{ s.web }}">{{ s.name }}</a> {% endfor %} {% endif %}
+      <a href="/datasets/{{ d.name }}.html">Detalhes</a> <a href="/download/{{ d.name }}.zip">Download</a>
     {% endfor %}
   </ul>
 {% endblock content %}
