--- a/templates/list.html
+++ b/templates/list.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <ul>
+  <ul class="datasets">
     {% for d in datapackages %}
-      {{ d.title }}
-      {{ d.description }}
-      {% if d.sources %} Fontes: {% for s in d.sources %}<a href="{{ s.web }}">{{ s.name }}</a> {% endfor %} {% endif %}
-      <a href="/datasets/{{ d.name }}.html">Detalhes</a> <a href="/download/{{ d.name }}.zip">Download</a>
+      <li>
+				<h3>{{ d.title }} <span><a href="/datasets/{{ d.name }}.html">Detalhes</a> <a href="/download/{{ d.name }}.zip">Download</a></span></h3>
+      	<p>{{ d.description }}</p>
+      	<p class="source">{% if d.sources %} <em>Fontes:</em> {% for s in d.sources %}<a href="{{ s.web }}">{{ s.name }}</a> {% endfor %} {% endif %}</p>
+			</li>
     {% endfor %}
   </ul>
 {% endblock content %}
