--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,9 @@
 			<div>
 				<div class="description">
 					<p>A Central de Dados é um repositório aberto de datasets <a href="#">Open Data em Portugal</a>. Os dados aqui publicados são provenientes de diversas fontes (sempre indicadas!) e estão sob a curadoria do <a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday</a>.</p>
-					<p>Mais texto Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam scelerisque nibh in tempus. Suspendisse quis fermentum arcu, vitae euismod turpis. Aenean rhoncus felis felis, id scelerisque ligula pretium sit amet. Nulla est mauris, egestas eget consectetur quis, venenatis quis dui. Suspendisse ullamcorper scelerisque quam sed suscipit. Aenean pulvinar ut tellus eu ornare.</p>
-					<p>Etiam convallis enim vitae tellus consectetur, in varius lorem pretium. Etiam imperdiet condimentum magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam non diam ullamcorper, vulputate nulla facilisis, dictum lorem.</p>
+					<p>Neste momento, os datasets que colocamos à disposição estão em formato CSV, mas estamos a trabalhar ativamente para poder fornecer outros formatos open data.</p>
+          <p>A Central de Dados é uma ferramenta livre, e todo o código que criámos está <a href="https://github.com/centraldedados/datacentral">disponível como software livre</a>. O projeto ainda está em construção, por isso agradecemos
+          imenso que nos sejam indicadas correções, sugestões e outros comentários no nosso <a href="https://github.com/centraldedados/datacentral/issues">tracker</a>.</p>
 				</div>
 				<div class="main">
 					{% block content %}{% endblock %}
