--- a/templates/dataset.html
+++ b/templates/dataset.html
@@ -9,6 +9,7 @@
 	</div>
 
 	<ul class="datafiles">
+		<li><h4>Ficheiros</h4></li>
 		{% for d in datafiles %}
 			<li class="box">
 		  		<span>{{ d.basename }}</span>
