--- a/templates/base.html
+++ b/templates/base.html
@@ -49,10 +49,10 @@
 						<img src="/img/okfn.png" alt="OKFN" />
 						<strong>Open Knowledge</strong>
 					</a></li>
-					<li>Parceiros <a rel="external" href="http://ama.pt">
+					<!--<li>Parceiros <a rel="external" href="http://ama.pt">
 						<img src="/img/ama.png" alt="AMA" />
 						<strong>AMA, Agência para a Modernização</strong>
-					</a></li>
+					</a></li>-->
 				</ul>
 			</div>
 		</footer>
