Welcome text is now a markdown file, not hardcoded in the template

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,7 @@
 		<section class="row">
 			<div>
 				<div class="description">
-					<p>A Central de Dados é um repositório aberto de datasets <a href="#">Open Data em Portugal</a>. Os dados aqui publicados são provenientes de diversas fontes (sempre indicadas!) e estão sob a curadoria do <a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday</a>.</p>
-					<p>Neste momento, os datasets que colocamos à disposição estão em formato CSV, mas estamos a trabalhar ativamente para poder fornecer outros formatos open data.</p>
-          <p>A Central de Dados é uma ferramenta livre, e todo o código que criámos está <a href="https://github.com/centraldedados/datacentral">disponível como software livre</a>. O projeto ainda está em construção, por isso agradecemos
-          imenso que nos sejam indicadas correções, sugestões e outros comentários no nosso <a href="https://github.com/centraldedados/datacentral/issues">tracker</a>.</p>
+          {{ welcome_text }}
 				</div>
 				<div class="main">
 					{% block content %}{% endblock %}
