Add link to the API in the navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,16 +9,17 @@
       <link rel="stylesheet" href="/css/main.css">
 	</head>
 	<body>
-	  <!--
 		<nav class="nav">
 			<div>
 				<ul>
+	  			  <!--
 				  <li><a href="#">Acerca</a></li>
 				  <li><a href="#">FAQ</a></li>
+			          -->
+				  <li><a href="/api.json">API</a></li>
 				</ul>
 			</div>
 		</nav>
-		-->
 		<header class="header">
 			<div>
 				<a href="/">
